IDREPO-1583: Consolidate ID-Repository services into single Spring Boot service